// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReputationLoading snapshot – loading skeleton matches snapshot for the loading skeleton (aria-busy state) 1`] = `
<main
  aria-busy="true"
  class="min-h-screen p-8"
>
  <span
    aria-atomic="true"
    aria-live="polite"
    class="sr-only"
    role="status"
  >
    Loading reputation…
  </span>
  <div
    aria-hidden="true"
    class="mb-6 h-8 w-32 rounded-lg bg-slate-200 animate-shimmer motion-reduce:animate-none"
  />
  <section
    class="w-full max-w-5xl mx-auto space-y-8 px-4 py-10 sm:px-6 lg:px-8"
  >
    <div
      aria-hidden="true"
      class="rounded-3xl border border-slate-200 bg-white p-6 shadow-sm sm:p-8"
    >
      <div
        class="flex flex-col gap-6 lg:flex-row lg:items-center lg:justify-between"
      >
        <div
          class="flex items-center gap-4"
        >
          <div
            class="h-16 w-16 rounded-2xl bg-slate-200 animate-shimmer motion-reduce:animate-none"
          />
          <div
            class="space-y-2"
          >
            <div
              class="h-3.5 w-28 rounded bg-slate-200 animate-shimmer motion-reduce:animate-none"
            />
            <div
              class="h-6 w-40 rounded-lg bg-slate-200 animate-shimmer motion-reduce:animate-none"
            />
          </div>
        </div>
        <div
          class="flex flex-col gap-2 rounded-3xl bg-slate-50 p-4 sm:p-5 lg:w-72"
        >
          <div
            class="h-3.5 w-36 rounded bg-slate-200 animate-shimmer motion-reduce:animate-none"
          />
          <div
            class="h-3 w-full rounded bg-slate-200 animate-shimmer motion-reduce:animate-none"
          />
          <div
            class="h-3 w-4/5 rounded bg-slate-200 animate-shimmer motion-reduce:animate-none"
          />
        </div>
      </div>
      <div
        class="mt-8 grid gap-4 sm:grid-cols-3"
      >
        <div
          class="rounded-3xl border border-slate-200 bg-slate-50 p-5 space-y-3"
        >
          <p
            class="h-3.5 text-xs font-medium text-slate-500"
          >
            Reputation score
          </p>
          <div
            class="h-8 w-20 rounded-lg bg-slate-200 animate-shimmer motion-reduce:animate-none"
          />
        </div>
        <div
          class="rounded-3xl border border-slate-200 bg-slate-50 p-5 space-y-3"
        >
          <p
            class="h-3.5 text-xs font-medium text-slate-500"
          >
            Level
          </p>
          <div
            class="h-8 w-20 rounded-lg bg-slate-200 animate-shimmer motion-reduce:animate-none"
          />
        </div>
        <div
          class="rounded-3xl border border-slate-200 bg-slate-50 p-5 space-y-3"
        >
          <p
            class="h-3.5 text-xs font-medium text-slate-500"
          >
            Explanation
          </p>
          <div
            class="h-8 w-20 rounded-lg bg-slate-200 animate-shimmer motion-reduce:animate-none"
          />
        </div>
      </div>
    </div>
    <div
      aria-hidden="true"
      class="rounded-3xl border border-slate-200 bg-white p-6 shadow-sm sm:p-8"
    >
      <div
        class="mb-6 flex items-center justify-between gap-4"
      >
        <div
          class="space-y-2"
        >
          <div
            class="h-6 w-44 rounded-lg bg-slate-200 animate-shimmer motion-reduce:animate-none"
          />
          <div
            class="h-3.5 w-64 rounded bg-slate-200 animate-shimmer motion-reduce:animate-none"
          />
        </div>
        <div
          class="h-6 w-28 rounded-full bg-slate-200 animate-shimmer motion-reduce:animate-none"
        />
      </div>
      <ol
        class="space-y-4"
      >
        <li
          class="rounded-3xl border border-slate-200 bg-slate-50 p-5"
        >
          <div
            class="flex flex-col gap-2 sm:flex-row sm:items-center sm:justify-between"
          >
            <div
              class="space-y-2"
            >
              <div
                class="h-3.5 w-24 rounded bg-slate-200 animate-shimmer motion-reduce:animate-none"
              />
              <div
                class="h-5 w-56 rounded-lg bg-slate-200 animate-shimmer motion-reduce:animate-none"
              />
            </div>
            <div
              class="h-3.5 w-20 rounded bg-slate-200 animate-shimmer motion-reduce:animate-none"
            />
          </div>
        </li>
        <li
          class="rounded-3xl border border-slate-200 bg-slate-50 p-5"
        >
          <div
            class="flex flex-col gap-2 sm:flex-row sm:items-center sm:justify-between"
          >
            <div
              class="space-y-2"
            >
              <div
                class="h-3.5 w-24 rounded bg-slate-200 animate-shimmer motion-reduce:animate-none"
              />
              <div
                class="h-5 w-56 rounded-lg bg-slate-200 animate-shimmer motion-reduce:animate-none"
              />
            </div>
            <div
              class="h-3.5 w-20 rounded bg-slate-200 animate-shimmer motion-reduce:animate-none"
            />
          </div>
        </li>
        <li
          class="rounded-3xl border border-slate-200 bg-slate-50 p-5"
        >
          <div
            class="flex flex-col gap-2 sm:flex-row sm:items-center sm:justify-between"
          >
            <div
              class="space-y-2"
            >
              <div
                class="h-3.5 w-24 rounded bg-slate-200 animate-shimmer motion-reduce:animate-none"
              />
              <div
                class="h-5 w-56 rounded-lg bg-slate-200 animate-shimmer motion-reduce:animate-none"
              />
            </div>
            <div
              class="h-3.5 w-20 rounded bg-slate-200 animate-shimmer motion-reduce:animate-none"
            />
          </div>
        </li>
      </ol>
    </div>
  </section>
</main>
`;

exports[`ReputationPageContent snapshot – empty state (negative score) matches snapshot when score is negative 1`] = `
<main
  class="min-h-screen p-8"
>
  <h1
    class="text-2xl font-bold mb-6"
  >
    Reputation
  </h1>
  <div
    aria-labelledby="_r_2_"
    class="flex flex-col items-center justify-center px-4 py-8 text-center sm:px-8 sm:py-10"
    data-testid="empty-state"
    role="region"
  >
    <div
      aria-hidden="true"
      class="mb-5 inline-flex h-24 w-24 items-center justify-center rounded-2xl ring-1 bg-amber-50 text-amber-700 ring-amber-100"
    >
      <svg
        aria-hidden="true"
        class="h-16 w-16"
        fill="none"
        viewBox="0 0 64 64"
      >
        <path
          d="M32 10l6.2 12.6 13.9 2-10 9.8 2.4 13.8L32 41.7 19.6 48.2l2.4-13.8-10-9.8 13.9-2L32 10z"
          stroke="currentColor"
          stroke-linejoin="round"
          stroke-width="4"
        />
        <path
          d="M24 54h16"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-width="4"
        />
      </svg>
    </div>
    <h2
      class="mb-2 max-w-xl text-xl font-semibold text-gray-950"
      id="_r_2_"
    >
      No reputation yet
    </h2>
    <p
      class="mb-5 max-w-md text-sm leading-6 text-gray-700 sm:text-base"
    >
      Your reputation will be built as you complete contracts and receive feedback from clients. Start by creating and fulfilling your first contract.
    </p>
  </div>
</main>
`;

exports[`ReputationPageContent snapshot – empty state (null data) matches snapshot when reputationData is null 1`] = `
<main
  class="min-h-screen p-8"
>
  <h1
    class="text-2xl font-bold mb-6"
  >
    Reputation
  </h1>
  <div
    aria-labelledby="_r_0_"
    class="flex flex-col items-center justify-center px-4 py-8 text-center sm:px-8 sm:py-10"
    data-testid="empty-state"
    role="region"
  >
    <div
      aria-hidden="true"
      class="mb-5 inline-flex h-24 w-24 items-center justify-center rounded-2xl ring-1 bg-amber-50 text-amber-700 ring-amber-100"
    >
      <svg
        aria-hidden="true"
        class="h-16 w-16"
        fill="none"
        viewBox="0 0 64 64"
      >
        <path
          d="M32 10l6.2 12.6 13.9 2-10 9.8 2.4 13.8L32 41.7 19.6 48.2l2.4-13.8-10-9.8 13.9-2L32 10z"
          stroke="currentColor"
          stroke-linejoin="round"
          stroke-width="4"
        />
        <path
          d="M24 54h16"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-width="4"
        />
      </svg>
    </div>
    <h2
      class="mb-2 max-w-xl text-xl font-semibold text-gray-950"
      id="_r_0_"
    >
      No reputation yet
    </h2>
    <p
      class="mb-5 max-w-md text-sm leading-6 text-gray-700 sm:text-base"
    >
      Your reputation will be built as you complete contracts and receive feedback from clients. Start by creating and fulfilling your first contract.
    </p>
  </div>
</main>
`;

exports[`ReputationPageContent snapshot – empty state (null score) matches snapshot when score is null 1`] = `
<main
  class="min-h-screen p-8"
>
  <h1
    class="text-2xl font-bold mb-6"
  >
    Reputation
  </h1>
  <div
    aria-labelledby="_r_3_"
    class="flex flex-col items-center justify-center px-4 py-8 text-center sm:px-8 sm:py-10"
    data-testid="empty-state"
    role="region"
  >
    <div
      aria-hidden="true"
      class="mb-5 inline-flex h-24 w-24 items-center justify-center rounded-2xl ring-1 bg-amber-50 text-amber-700 ring-amber-100"
    >
      <svg
        aria-hidden="true"
        class="h-16 w-16"
        fill="none"
        viewBox="0 0 64 64"
      >
        <path
          d="M32 10l6.2 12.6 13.9 2-10 9.8 2.4 13.8L32 41.7 19.6 48.2l2.4-13.8-10-9.8 13.9-2L32 10z"
          stroke="currentColor"
          stroke-linejoin="round"
          stroke-width="4"
        />
        <path
          d="M24 54h16"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-width="4"
        />
      </svg>
    </div>
    <h2
      class="mb-2 max-w-xl text-xl font-semibold text-gray-950"
      id="_r_3_"
    >
      No reputation yet
    </h2>
    <p
      class="mb-5 max-w-md text-sm leading-6 text-gray-700 sm:text-base"
    >
      Your reputation will be built as you complete contracts and receive feedback from clients. Start by creating and fulfilling your first contract.
    </p>
  </div>
</main>
`;

exports[`ReputationPageContent snapshot – empty state (undefined data) matches snapshot when reputationData is undefined 1`] = `
<main
  class="min-h-screen p-8"
>
  <h1
    class="text-2xl font-bold mb-6"
  >
    Reputation
  </h1>
  <div
    aria-labelledby="_r_1_"
    class="flex flex-col items-center justify-center px-4 py-8 text-center sm:px-8 sm:py-10"
    data-testid="empty-state"
    role="region"
  >
    <div
      aria-hidden="true"
      class="mb-5 inline-flex h-24 w-24 items-center justify-center rounded-2xl ring-1 bg-amber-50 text-amber-700 ring-amber-100"
    >
      <svg
        aria-hidden="true"
        class="h-16 w-16"
        fill="none"
        viewBox="0 0 64 64"
      >
        <path
          d="M32 10l6.2 12.6 13.9 2-10 9.8 2.4 13.8L32 41.7 19.6 48.2l2.4-13.8-10-9.8 13.9-2L32 10z"
          stroke="currentColor"
          stroke-linejoin="round"
          stroke-width="4"
        />
        <path
          d="M24 54h16"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-width="4"
        />
      </svg>
    </div>
    <h2
      class="mb-2 max-w-xl text-xl font-semibold text-gray-950"
      id="_r_1_"
    >
      No reputation yet
    </h2>
    <p
      class="mb-5 max-w-md text-sm leading-6 text-gray-700 sm:text-base"
    >
      Your reputation will be built as you complete contracts and receive feedback from clients. Start by creating and fulfilling your first contract.
    </p>
  </div>
</main>
`;

exports[`ReputationPageContent snapshot – loaded state (default userName) matches snapshot when userName is omitted (defaults to "User") 1`] = `
<main
  class="min-h-screen p-8"
>
  <h1
    class="text-2xl font-bold mb-6"
  >
    Reputation
  </h1>
  <section
    aria-labelledby="profile-heading"
    class="w-full max-w-5xl mx-auto space-y-8 px-4 py-10 sm:px-6 lg:px-8"
  >
    <div
      class="rounded-3xl border-[var(--border)] bg-[var(--card)] p-6 shadow-sm sm:p-8"
    >
      <h2
        class="sr-only"
        id="profile-heading"
      >
        Reputation profile for 
        User
      </h2>
      <div
        class="flex flex-col gap-6 lg:flex-row lg:items-center lg:justify-between"
      >
        <div
          class="flex items-center gap-4"
        >
          <div
            class="flex h-16 w-16 items-center justify-center rounded-2xl bg-[var(--foreground)] text-2xl font-semibold text-[var(--background)]"
          >
            U
          </div>
          <div>
            <p
              class="text-sm font-medium text-[var(--muted-foreground)]"
            >
              Reputation profile
            </p>
            <h1
              class="text-2xl font-semibold text-[var(--foreground)]"
            >
              User
            </h1>
          </div>
        </div>
        <div
          class="flex flex-col gap-2 rounded-3xl bg-[var(--muted)] p-4 text-[var(--muted-foreground)] sm:p-5"
        >
          <p
            class="text-sm font-medium text-[var(--muted-foreground)]"
          >
            Privacy-friendly defaults
          </p>
          <p
            class="text-sm leading-6"
          >
            Only summary trust signals are shown by default. Sensitive metadata remains hidden.
          </p>
        </div>
      </div>
      <div
        class="mt-8 grid gap-4 sm:grid-cols-3"
      >
        <div
          class="rounded-3xl border-[var(--border)] bg-[var(--surface)] p-5"
        >
          <p
            class="text-sm font-medium text-[var(--muted-foreground)]"
            id="reputation-score-label"
          >
            Reputation score
          </p>
          <p
            aria-labelledby="reputation-score-label"
            class="mt-3 text-3xl font-semibold text-[var(--foreground)]"
          >
            <span
              aria-describedby="reputation-legend"
              aria-labelledby="reputation-score-label"
              aria-valuemax="5"
              aria-valuemin="0"
              aria-valuenow="3.8"
              role="meter"
            >
              <span
                class="sr-only"
              >
                Reputation score 
              </span>
              3.8
              <span
                class="sr-only"
              >
                 out of 
                5
              </span>
            </span>
          </p>
        </div>
        <div
          class="rounded-3xl border border-[var(--border)] bg-[var(--card)] p-5"
        >
          <p
            class="text-sm font-medium text-[var(--muted-foreground)]"
            id="reputation-level-label"
          >
            Level
          </p>
          <p
            aria-labelledby="reputation-level-label"
            class="mt-3 text-xl font-semibold text-[var(--foreground)]"
          >
            <span
              class="sr-only"
            >
              Level 
            </span>
            Trusted Partner
          </p>
        </div>
        <div
          class="rounded-3xl border border-[var(--border)] bg-[var(--card)] p-5"
        >
          <p
            class="text-sm font-medium text-[var(--muted-foreground)]"
          >
            Explanation
          </p>
          <p
            class="mt-3 text-sm leading-6 text-[var(--muted-foreground)]"
          >
            Reputation represents verified trust signals and activity history, not sensitive personal metadata. Privacy-friendly defaults keep your profile safe.
          </p>
        </div>
      </div>
      <div
        class="mt-6 border-t border-[var(--border)] pt-6"
      >
        <h2
          class="text-sm font-semibold text-[var(--foreground)]"
          id="reputation-legend-title"
        >
          Reputation Level Legend
        </h2>
        <ul
          aria-labelledby="reputation-legend-title"
          class="mt-3 grid gap-3 sm:grid-cols-5 text-sm"
          id="reputation-legend"
        >
          <li
            class="rounded-2xl border p-3 transition-colors border-[var(--border)] bg-[var(--surface)] text-[var(--muted-foreground)]"
          >
            <p
              class="font-bold text-xs uppercase tracking-wider text-[var(--muted-foreground)]"
            >
              0.0
               - 
              1.0
            </p>
            <p
              class="mt-1 text-sm"
            >
              Newcomer
            </p>
          </li>
          <li
            class="rounded-2xl border p-3 transition-colors border-[var(--border)] bg-[var(--surface)] text-[var(--muted-foreground)]"
          >
            <p
              class="font-bold text-xs uppercase tracking-wider text-[var(--muted-foreground)]"
            >
              1.0
               - 
              2.0
            </p>
            <p
              class="mt-1 text-sm"
            >
              Contributor
            </p>
          </li>
          <li
            class="rounded-2xl border p-3 transition-colors border-[var(--border)] bg-[var(--surface)] text-[var(--muted-foreground)]"
          >
            <p
              class="font-bold text-xs uppercase tracking-wider text-[var(--muted-foreground)]"
            >
              2.0
               - 
              3.0
            </p>
            <p
              class="mt-1 text-sm"
            >
              Active Contributor
            </p>
          </li>
          <li
            class="rounded-2xl border p-3 transition-colors border-[var(--legend-active-border)] bg-[var(--legend-active-bg)] text-[var(--legend-active-foreground)] font-semibold"
          >
            <p
              class="font-bold text-xs uppercase tracking-wider text-[var(--muted-foreground)]"
            >
              3.0
               - 
              4.0
            </p>
            <p
              class="mt-1 text-sm"
            >
              Trusted Partner
            </p>
          </li>
          <li
            class="rounded-2xl border p-3 transition-colors border-[var(--border)] bg-[var(--surface)] text-[var(--muted-foreground)]"
          >
            <p
              class="font-bold text-xs uppercase tracking-wider text-[var(--muted-foreground)]"
            >
              4.0
               - 
              5.0
            </p>
            <p
              class="mt-1 text-sm"
            >
              Expert
            </p>
          </li>
        </ul>
      </div>
    </div>
    <div
      class="rounded-3xl border-[var(--border)] bg-[var(--card)] p-6 shadow-sm sm:p-8"
    >
      <div
        class="mb-6 flex flex-col gap-4 sm:flex-row sm:items-center sm:justify-between"
      >
        <div>
          <h2
            class="text-xl font-semibold text-[var(--foreground)]"
          >
            Reputation history
          </h2>
          <p
            class="mt-1 text-sm text-[var(--muted-foreground)]"
          >
            History is shown as safe, aggregated events with no wallet or personal metadata by default.
          </p>
        </div>
        <div
          class="flex flex-col gap-3 sm:flex-row sm:items-center sm:gap-4"
        >
          <div
            class="flex items-center gap-2"
          >
            <label
              class="text-sm font-medium text-[var(--foreground)]"
              for="history-type-filter"
            >
              Filter:
            </label>
            <select
              class="rounded-lg border border-[var(--border)] bg-[var(--card)] py-1 pl-3 pr-8 text-sm text-[var(--foreground)] focus:border-[var(--ring)] focus:outline-none focus:ring-1 focus:ring-[var(--ring)]"
              data-testid="reputation-type-filter"
              id="history-type-filter"
            >
              <option
                value="All"
              >
                All
              </option>
              <option
                value="On-chain review"
              >
                On-chain review
              </option>
              <option
                value="Referral"
              >
                Referral
              </option>
              <option
                value="Verification"
              >
                Verification
              </option>
            </select>
          </div>
          <div
            class="flex items-center gap-2"
          >
            <label
              class="text-sm font-medium text-[var(--foreground)]"
              for="history-sort-dir"
            >
              Sort:
            </label>
            <select
              class="rounded-lg border border-[var(--border)] bg-[var(--card)] py-1 pl-3 pr-8 text-sm text-[var(--foreground)] focus:border-[var(--ring)] focus:outline-none focus:ring-1 focus:ring-[var(--ring)]"
              data-testid="reputation-sort-dir"
              id="history-sort-dir"
            >
              <option
                value="desc"
              >
                Newest first
              </option>
              <option
                value="asc"
              >
                Oldest first
              </option>
            </select>
          </div>
          <div
            aria-live="polite"
            class="sr-only"
          >
            Showing 
            3
             
            events
            , 
            newest first
          </div>
          <span
            class="rounded-full bg-[var(--surface)] px-3 py-1 text-xs font-medium uppercase tracking-[0.18em] text-[var(--muted-foreground)]"
          >
            Visible
          </span>
        </div>
      </div>
      <p
        aria-atomic="true"
        aria-live="polite"
        class="sr-only"
      />
      <div
        class="space-y-4"
      >
        <div
          class="flex flex-col gap-3 rounded-3xl border-[var(--border)] bg-[var(--surface)] p-4 sm:flex-row sm:items-center sm:justify-between"
        >
          <label
            class="inline-flex items-center gap-3 text-sm font-medium text-slate-800"
          >
            <input
              aria-label="Select all reputation items"
              class="h-4 w-4 rounded border-[var(--border)] text-[var(--foreground)] focus:ring-[var(--ring)]"
              type="checkbox"
            />
            Select all
          </label>
          <div
            aria-label="Reputation history actions"
            class="flex flex-wrap gap-2"
            role="toolbar"
          >
            <button
              aria-label="Export selected reputation items"
              class="rounded-2xl border border-[var(--border)] bg-[var(--card)] px-3 py-2 text-sm font-semibold text-[var(--foreground)] transition hover:border-[var(--muted-foreground)] disabled:cursor-not-allowed disabled:opacity-50"
              disabled=""
              type="button"
            >
              Export selected
            </button>
            <button
              aria-label="Delete selected reputation items"
              class="rounded-2xl bg-rose-600 px-3 py-2 text-sm font-semibold text-white transition hover:bg-rose-700 disabled:cursor-not-allowed disabled:opacity-50"
              disabled=""
              type="button"
            >
              Delete selected
            </button>
            <button
              aria-label="Clear selected reputation items; clear selection"
              class="rounded-2xl border border-[var(--border)] bg-[var(--card)] px-3 py-2 text-sm font-semibold text-[var(--foreground)] transition hover:border-[var(--muted-foreground)] disabled:cursor-not-allowed disabled:opacity-50"
              disabled=""
              type="button"
            >
              Clear selection
            </button>
          </div>
        </div>
        <ol
          class="space-y-4"
        >
          <li
            class="rounded-3xl border p-5 border-[var(--border)] bg-[var(--card)]"
          >
            <div
              class="flex flex-col gap-3 sm:flex-row sm:items-start sm:justify-between"
            >
              <label
                class="flex items-start gap-3"
              >
                <input
                  aria-label="Select reputation item Verification: Completed identity verification"
                  class="mt-1 h-4 w-4 rounded border-[var(--border)] text-[var(--foreground)] focus:ring-[var(--ring)]"
                  type="checkbox"
                />
                <span>
                  <span
                    class="block text-sm font-medium text-[var(--muted-foreground)]"
                  >
                    Verification
                  </span>
                  <span
                    class="mt-1 block text-base font-semibold text-[var(--foreground)]"
                  >
                    Completed identity verification
                  </span>
                </span>
              </label>
              <div
                class="flex items-center gap-2 sm:flex-col sm:items-end"
              >
                <time
                  class="text-sm text-[var(--muted-foreground)] sm:text-right"
                  datetime="2026-04-24"
                >
                  2026-04-24
                </time>
                <div
                  class="flex items-center gap-1.5"
                >
                  <code
                    class="text-xs text-[var(--muted-foreground)] font-mono"
                    data-testid="reputation-event-id-ev-1"
                  >
                    ev-1
                  </code>
                  <button
                    aria-label="Copy reputation event ID ev-1 to clipboard"
                    aria-pressed="false"
                    class="inline-flex items-center gap-1 px-2 py-0.5 rounded text-xs font-mono border focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-1 focus-visible:ring-blue-500 bg-[var(--card)] border-[var(--border)] text-[var(--muted-foreground)] hover:bg-[var(--surface)]"
                    data-testid="copy-reputation-id-btn-ev-1"
                    title="Copy ID to clipboard"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      fill="none"
                      height="12"
                      viewBox="0 0 12 12"
                      width="12"
                    >
                      <rect
                        height="8"
                        rx="1"
                        stroke="currentColor"
                        stroke-width="1.2"
                        width="7"
                        x="1"
                        y="3"
                      />
                      <path
                        d="M4 1h6a1 1 0 0 1 1 1v8"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-width="1.2"
                      />
                    </svg>
                    Copy ID
                  </button>
                </div>
              </div>
            </div>
          </li>
          <li
            class="rounded-3xl border p-5 border-[var(--border)] bg-[var(--card)]"
          >
            <div
              class="flex flex-col gap-3 sm:flex-row sm:items-start sm:justify-between"
            >
              <label
                class="flex items-start gap-3"
              >
                <input
                  aria-label="Select reputation item On-chain review: Received positive trust signal"
                  class="mt-1 h-4 w-4 rounded border-[var(--border)] text-[var(--foreground)] focus:ring-[var(--ring)]"
                  type="checkbox"
                />
                <span>
                  <span
                    class="block text-sm font-medium text-[var(--muted-foreground)]"
                  >
                    On-chain review
                  </span>
                  <span
                    class="mt-1 block text-base font-semibold text-[var(--foreground)]"
                  >
                    Received positive trust signal
                  </span>
                </span>
              </label>
              <div
                class="flex items-center gap-2 sm:flex-col sm:items-end"
              >
                <time
                  class="text-sm text-[var(--muted-foreground)] sm:text-right"
                  datetime="2026-04-23"
                >
                  2026-04-23
                </time>
                <div
                  class="flex items-center gap-1.5"
                >
                  <code
                    class="text-xs text-[var(--muted-foreground)] font-mono"
                    data-testid="reputation-event-id-ev-2"
                  >
                    ev-2
                  </code>
                  <button
                    aria-label="Copy reputation event ID ev-2 to clipboard"
                    aria-pressed="false"
                    class="inline-flex items-center gap-1 px-2 py-0.5 rounded text-xs font-mono border focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-1 focus-visible:ring-blue-500 bg-[var(--card)] border-[var(--border)] text-[var(--muted-foreground)] hover:bg-[var(--surface)]"
                    data-testid="copy-reputation-id-btn-ev-2"
                    title="Copy ID to clipboard"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      fill="none"
                      height="12"
                      viewBox="0 0 12 12"
                      width="12"
                    >
                      <rect
                        height="8"
                        rx="1"
                        stroke="currentColor"
                        stroke-width="1.2"
                        width="7"
                        x="1"
                        y="3"
                      />
                      <path
                        d="M4 1h6a1 1 0 0 1 1 1v8"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-width="1.2"
                      />
                    </svg>
                    Copy ID
                  </button>
                </div>
              </div>
            </div>
          </li>
          <li
            class="rounded-3xl border p-5 border-[var(--border)] bg-[var(--card)]"
          >
            <div
              class="flex flex-col gap-3 sm:flex-row sm:items-start sm:justify-between"
            >
              <label
                class="flex items-start gap-3"
              >
                <input
                  aria-label="Select reputation item Referral: Referred two new community members"
                  class="mt-1 h-4 w-4 rounded border-[var(--border)] text-[var(--foreground)] focus:ring-[var(--ring)]"
                  type="checkbox"
                />
                <span>
                  <span
                    class="block text-sm font-medium text-[var(--muted-foreground)]"
                  >
                    Referral
                  </span>
                  <span
                    class="mt-1 block text-base font-semibold text-[var(--foreground)]"
                  >
                    Referred two new community members
                  </span>
                </span>
              </label>
              <div
                class="flex items-center gap-2 sm:flex-col sm:items-end"
              >
                <time
                  class="text-sm text-[var(--muted-foreground)] sm:text-right"
                  datetime="2026-04-20"
                >
                  2026-04-20
                </time>
                <div
                  class="flex items-center gap-1.5"
                >
                  <code
                    class="text-xs text-[var(--muted-foreground)] font-mono"
                    data-testid="reputation-event-id-ev-3"
                  >
                    ev-3
                  </code>
                  <button
                    aria-label="Copy reputation event ID ev-3 to clipboard"
                    aria-pressed="false"
                    class="inline-flex items-center gap-1 px-2 py-0.5 rounded text-xs font-mono border focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-1 focus-visible:ring-blue-500 bg-[var(--card)] border-[var(--border)] text-[var(--muted-foreground)] hover:bg-[var(--surface)]"
                    data-testid="copy-reputation-id-btn-ev-3"
                    title="Copy ID to clipboard"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      fill="none"
                      height="12"
                      viewBox="0 0 12 12"
                      width="12"
                    >
                      <rect
                        height="8"
                        rx="1"
                        stroke="currentColor"
                        stroke-width="1.2"
                        width="7"
                        x="1"
                        y="3"
                      />
                      <path
                        d="M4 1h6a1 1 0 0 1 1 1v8"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-width="1.2"
                      />
                    </svg>
                    Copy ID
                  </button>
                </div>
              </div>
            </div>
          </li>
        </ol>
        <p
          class="pt-2 text-center text-sm text-slate-500"
          data-testid="reputation-history-end"
        >
          All 
          3
           events shown
        </p>
      </div>
    </div>
  </section>
</main>
`;

exports[`ReputationPageContent snapshot – loaded state (full reputation) matches snapshot for full reputation with history 1`] = `
<main
  class="min-h-screen p-8"
>
  <h1
    class="text-2xl font-bold mb-6"
  >
    Reputation
  </h1>
  <section
    aria-labelledby="profile-heading"
    class="w-full max-w-5xl mx-auto space-y-8 px-4 py-10 sm:px-6 lg:px-8"
  >
    <div
      class="rounded-3xl border-[var(--border)] bg-[var(--card)] p-6 shadow-sm sm:p-8"
    >
      <h2
        class="sr-only"
        id="profile-heading"
      >
        Reputation profile for 
        Grace
      </h2>
      <div
        class="flex flex-col gap-6 lg:flex-row lg:items-center lg:justify-between"
      >
        <div
          class="flex items-center gap-4"
        >
          <div
            class="flex h-16 w-16 items-center justify-center rounded-2xl bg-[var(--foreground)] text-2xl font-semibold text-[var(--background)]"
          >
            G
          </div>
          <div>
            <p
              class="text-sm font-medium text-[var(--muted-foreground)]"
            >
              Reputation profile
            </p>
            <h1
              class="text-2xl font-semibold text-[var(--foreground)]"
            >
              Grace
            </h1>
          </div>
        </div>
        <div
          class="flex flex-col gap-2 rounded-3xl bg-[var(--muted)] p-4 text-[var(--muted-foreground)] sm:p-5"
        >
          <p
            class="text-sm font-medium text-[var(--muted-foreground)]"
          >
            Privacy-friendly defaults
          </p>
          <p
            class="text-sm leading-6"
          >
            Only summary trust signals are shown by default. Sensitive metadata remains hidden.
          </p>
        </div>
      </div>
      <div
        class="mt-8 grid gap-4 sm:grid-cols-3"
      >
        <div
          class="rounded-3xl border-[var(--border)] bg-[var(--surface)] p-5"
        >
          <p
            class="text-sm font-medium text-[var(--muted-foreground)]"
            id="reputation-score-label"
          >
            Reputation score
          </p>
          <p
            aria-labelledby="reputation-score-label"
            class="mt-3 text-3xl font-semibold text-[var(--foreground)]"
          >
            <span
              aria-describedby="reputation-legend"
              aria-labelledby="reputation-score-label"
              aria-valuemax="5"
              aria-valuemin="0"
              aria-valuenow="3.8"
              role="meter"
            >
              <span
                class="sr-only"
              >
                Reputation score 
              </span>
              3.8
              <span
                class="sr-only"
              >
                 out of 
                5
              </span>
            </span>
          </p>
        </div>
        <div
          class="rounded-3xl border border-[var(--border)] bg-[var(--card)] p-5"
        >
          <p
            class="text-sm font-medium text-[var(--muted-foreground)]"
            id="reputation-level-label"
          >
            Level
          </p>
          <p
            aria-labelledby="reputation-level-label"
            class="mt-3 text-xl font-semibold text-[var(--foreground)]"
          >
            <span
              class="sr-only"
            >
              Level 
            </span>
            Trusted Partner
          </p>
        </div>
        <div
          class="rounded-3xl border border-[var(--border)] bg-[var(--card)] p-5"
        >
          <p
            class="text-sm font-medium text-[var(--muted-foreground)]"
          >
            Explanation
          </p>
          <p
            class="mt-3 text-sm leading-6 text-[var(--muted-foreground)]"
          >
            Reputation represents verified trust signals and activity history, not sensitive personal metadata. Privacy-friendly defaults keep your profile safe.
          </p>
        </div>
      </div>
      <div
        class="mt-6 border-t border-[var(--border)] pt-6"
      >
        <h2
          class="text-sm font-semibold text-[var(--foreground)]"
          id="reputation-legend-title"
        >
          Reputation Level Legend
        </h2>
        <ul
          aria-labelledby="reputation-legend-title"
          class="mt-3 grid gap-3 sm:grid-cols-5 text-sm"
          id="reputation-legend"
        >
          <li
            class="rounded-2xl border p-3 transition-colors border-[var(--border)] bg-[var(--surface)] text-[var(--muted-foreground)]"
          >
            <p
              class="font-bold text-xs uppercase tracking-wider text-[var(--muted-foreground)]"
            >
              0.0
               - 
              1.0
            </p>
            <p
              class="mt-1 text-sm"
            >
              Newcomer
            </p>
          </li>
          <li
            class="rounded-2xl border p-3 transition-colors border-[var(--border)] bg-[var(--surface)] text-[var(--muted-foreground)]"
          >
            <p
              class="font-bold text-xs uppercase tracking-wider text-[var(--muted-foreground)]"
            >
              1.0
               - 
              2.0
            </p>
            <p
              class="mt-1 text-sm"
            >
              Contributor
            </p>
          </li>
          <li
            class="rounded-2xl border p-3 transition-colors border-[var(--border)] bg-[var(--surface)] text-[var(--muted-foreground)]"
          >
            <p
              class="font-bold text-xs uppercase tracking-wider text-[var(--muted-foreground)]"
            >
              2.0
               - 
              3.0
            </p>
            <p
              class="mt-1 text-sm"
            >
              Active Contributor
            </p>
          </li>
          <li
            class="rounded-2xl border p-3 transition-colors border-[var(--legend-active-border)] bg-[var(--legend-active-bg)] text-[var(--legend-active-foreground)] font-semibold"
          >
            <p
              class="font-bold text-xs uppercase tracking-wider text-[var(--muted-foreground)]"
            >
              3.0
               - 
              4.0
            </p>
            <p
              class="mt-1 text-sm"
            >
              Trusted Partner
            </p>
          </li>
          <li
            class="rounded-2xl border p-3 transition-colors border-[var(--border)] bg-[var(--surface)] text-[var(--muted-foreground)]"
          >
            <p
              class="font-bold text-xs uppercase tracking-wider text-[var(--muted-foreground)]"
            >
              4.0
               - 
              5.0
            </p>
            <p
              class="mt-1 text-sm"
            >
              Expert
            </p>
          </li>
        </ul>
      </div>
    </div>
    <div
      class="rounded-3xl border-[var(--border)] bg-[var(--card)] p-6 shadow-sm sm:p-8"
    >
      <div
        class="mb-6 flex flex-col gap-4 sm:flex-row sm:items-center sm:justify-between"
      >
        <div>
          <h2
            class="text-xl font-semibold text-[var(--foreground)]"
          >
            Reputation history
          </h2>
          <p
            class="mt-1 text-sm text-[var(--muted-foreground)]"
          >
            History is shown as safe, aggregated events with no wallet or personal metadata by default.
          </p>
        </div>
        <div
          class="flex flex-col gap-3 sm:flex-row sm:items-center sm:gap-4"
        >
          <div
            class="flex items-center gap-2"
          >
            <label
              class="text-sm font-medium text-[var(--foreground)]"
              for="history-type-filter"
            >
              Filter:
            </label>
            <select
              class="rounded-lg border border-[var(--border)] bg-[var(--card)] py-1 pl-3 pr-8 text-sm text-[var(--foreground)] focus:border-[var(--ring)] focus:outline-none focus:ring-1 focus:ring-[var(--ring)]"
              data-testid="reputation-type-filter"
              id="history-type-filter"
            >
              <option
                value="All"
              >
                All
              </option>
              <option
                value="On-chain review"
              >
                On-chain review
              </option>
              <option
                value="Referral"
              >
                Referral
              </option>
              <option
                value="Verification"
              >
                Verification
              </option>
            </select>
          </div>
          <div
            class="flex items-center gap-2"
          >
            <label
              class="text-sm font-medium text-[var(--foreground)]"
              for="history-sort-dir"
            >
              Sort:
            </label>
            <select
              class="rounded-lg border border-[var(--border)] bg-[var(--card)] py-1 pl-3 pr-8 text-sm text-[var(--foreground)] focus:border-[var(--ring)] focus:outline-none focus:ring-1 focus:ring-[var(--ring)]"
              data-testid="reputation-sort-dir"
              id="history-sort-dir"
            >
              <option
                value="desc"
              >
                Newest first
              </option>
              <option
                value="asc"
              >
                Oldest first
              </option>
            </select>
          </div>
          <div
            aria-live="polite"
            class="sr-only"
          >
            Showing 
            3
             
            events
            , 
            newest first
          </div>
          <span
            class="rounded-full bg-[var(--surface)] px-3 py-1 text-xs font-medium uppercase tracking-[0.18em] text-[var(--muted-foreground)]"
          >
            Visible
          </span>
        </div>
      </div>
      <p
        aria-atomic="true"
        aria-live="polite"
        class="sr-only"
      />
      <div
        class="space-y-4"
      >
        <div
          class="flex flex-col gap-3 rounded-3xl border-[var(--border)] bg-[var(--surface)] p-4 sm:flex-row sm:items-center sm:justify-between"
        >
          <label
            class="inline-flex items-center gap-3 text-sm font-medium text-slate-800"
          >
            <input
              aria-label="Select all reputation items"
              class="h-4 w-4 rounded border-[var(--border)] text-[var(--foreground)] focus:ring-[var(--ring)]"
              type="checkbox"
            />
            Select all
          </label>
          <div
            aria-label="Reputation history actions"
            class="flex flex-wrap gap-2"
            role="toolbar"
          >
            <button
              aria-label="Export selected reputation items"
              class="rounded-2xl border border-[var(--border)] bg-[var(--card)] px-3 py-2 text-sm font-semibold text-[var(--foreground)] transition hover:border-[var(--muted-foreground)] disabled:cursor-not-allowed disabled:opacity-50"
              disabled=""
              type="button"
            >
              Export selected
            </button>
            <button
              aria-label="Delete selected reputation items"
              class="rounded-2xl bg-rose-600 px-3 py-2 text-sm font-semibold text-white transition hover:bg-rose-700 disabled:cursor-not-allowed disabled:opacity-50"
              disabled=""
              type="button"
            >
              Delete selected
            </button>
            <button
              aria-label="Clear selected reputation items; clear selection"
              class="rounded-2xl border border-[var(--border)] bg-[var(--card)] px-3 py-2 text-sm font-semibold text-[var(--foreground)] transition hover:border-[var(--muted-foreground)] disabled:cursor-not-allowed disabled:opacity-50"
              disabled=""
              type="button"
            >
              Clear selection
            </button>
          </div>
        </div>
        <ol
          class="space-y-4"
        >
          <li
            class="rounded-3xl border p-5 border-[var(--border)] bg-[var(--card)]"
          >
            <div
              class="flex flex-col gap-3 sm:flex-row sm:items-start sm:justify-between"
            >
              <label
                class="flex items-start gap-3"
              >
                <input
                  aria-label="Select reputation item Verification: Completed identity verification"
                  class="mt-1 h-4 w-4 rounded border-[var(--border)] text-[var(--foreground)] focus:ring-[var(--ring)]"
                  type="checkbox"
                />
                <span>
                  <span
                    class="block text-sm font-medium text-[var(--muted-foreground)]"
                  >
                    Verification
                  </span>
                  <span
                    class="mt-1 block text-base font-semibold text-[var(--foreground)]"
                  >
                    Completed identity verification
                  </span>
                </span>
              </label>
              <div
                class="flex items-center gap-2 sm:flex-col sm:items-end"
              >
                <time
                  class="text-sm text-[var(--muted-foreground)] sm:text-right"
                  datetime="2026-04-24"
                >
                  2026-04-24
                </time>
                <div
                  class="flex items-center gap-1.5"
                >
                  <code
                    class="text-xs text-[var(--muted-foreground)] font-mono"
                    data-testid="reputation-event-id-ev-1"
                  >
                    ev-1
                  </code>
                  <button
                    aria-label="Copy reputation event ID ev-1 to clipboard"
                    aria-pressed="false"
                    class="inline-flex items-center gap-1 px-2 py-0.5 rounded text-xs font-mono border focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-1 focus-visible:ring-blue-500 bg-[var(--card)] border-[var(--border)] text-[var(--muted-foreground)] hover:bg-[var(--surface)]"
                    data-testid="copy-reputation-id-btn-ev-1"
                    title="Copy ID to clipboard"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      fill="none"
                      height="12"
                      viewBox="0 0 12 12"
                      width="12"
                    >
                      <rect
                        height="8"
                        rx="1"
                        stroke="currentColor"
                        stroke-width="1.2"
                        width="7"
                        x="1"
                        y="3"
                      />
                      <path
                        d="M4 1h6a1 1 0 0 1 1 1v8"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-width="1.2"
                      />
                    </svg>
                    Copy ID
                  </button>
                </div>
              </div>
            </div>
          </li>
          <li
            class="rounded-3xl border p-5 border-[var(--border)] bg-[var(--card)]"
          >
            <div
              class="flex flex-col gap-3 sm:flex-row sm:items-start sm:justify-between"
            >
              <label
                class="flex items-start gap-3"
              >
                <input
                  aria-label="Select reputation item On-chain review: Received positive trust signal"
                  class="mt-1 h-4 w-4 rounded border-[var(--border)] text-[var(--foreground)] focus:ring-[var(--ring)]"
                  type="checkbox"
                />
                <span>
                  <span
                    class="block text-sm font-medium text-[var(--muted-foreground)]"
                  >
                    On-chain review
                  </span>
                  <span
                    class="mt-1 block text-base font-semibold text-[var(--foreground)]"
                  >
                    Received positive trust signal
                  </span>
                </span>
              </label>
              <div
                class="flex items-center gap-2 sm:flex-col sm:items-end"
              >
                <time
                  class="text-sm text-[var(--muted-foreground)] sm:text-right"
                  datetime="2026-04-23"
                >
                  2026-04-23
                </time>
                <div
                  class="flex items-center gap-1.5"
                >
                  <code
                    class="text-xs text-[var(--muted-foreground)] font-mono"
                    data-testid="reputation-event-id-ev-2"
                  >
                    ev-2
                  </code>
                  <button
                    aria-label="Copy reputation event ID ev-2 to clipboard"
                    aria-pressed="false"
                    class="inline-flex items-center gap-1 px-2 py-0.5 rounded text-xs font-mono border focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-1 focus-visible:ring-blue-500 bg-[var(--card)] border-[var(--border)] text-[var(--muted-foreground)] hover:bg-[var(--surface)]"
                    data-testid="copy-reputation-id-btn-ev-2"
                    title="Copy ID to clipboard"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      fill="none"
                      height="12"
                      viewBox="0 0 12 12"
                      width="12"
                    >
                      <rect
                        height="8"
                        rx="1"
                        stroke="currentColor"
                        stroke-width="1.2"
                        width="7"
                        x="1"
                        y="3"
                      />
                      <path
                        d="M4 1h6a1 1 0 0 1 1 1v8"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-width="1.2"
                      />
                    </svg>
                    Copy ID
                  </button>
                </div>
              </div>
            </div>
          </li>
          <li
            class="rounded-3xl border p-5 border-[var(--border)] bg-[var(--card)]"
          >
            <div
              class="flex flex-col gap-3 sm:flex-row sm:items-start sm:justify-between"
            >
              <label
                class="flex items-start gap-3"
              >
                <input
                  aria-label="Select reputation item Referral: Referred two new community members"
                  class="mt-1 h-4 w-4 rounded border-[var(--border)] text-[var(--foreground)] focus:ring-[var(--ring)]"
                  type="checkbox"
                />
                <span>
                  <span
                    class="block text-sm font-medium text-[var(--muted-foreground)]"
                  >
                    Referral
                  </span>
                  <span
                    class="mt-1 block text-base font-semibold text-[var(--foreground)]"
                  >
                    Referred two new community members
                  </span>
                </span>
              </label>
              <div
                class="flex items-center gap-2 sm:flex-col sm:items-end"
              >
                <time
                  class="text-sm text-[var(--muted-foreground)] sm:text-right"
                  datetime="2026-04-20"
                >
                  2026-04-20
                </time>
                <div
                  class="flex items-center gap-1.5"
                >
                  <code
                    class="text-xs text-[var(--muted-foreground)] font-mono"
                    data-testid="reputation-event-id-ev-3"
                  >
                    ev-3
                  </code>
                  <button
                    aria-label="Copy reputation event ID ev-3 to clipboard"
                    aria-pressed="false"
                    class="inline-flex items-center gap-1 px-2 py-0.5 rounded text-xs font-mono border focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-1 focus-visible:ring-blue-500 bg-[var(--card)] border-[var(--border)] text-[var(--muted-foreground)] hover:bg-[var(--surface)]"
                    data-testid="copy-reputation-id-btn-ev-3"
                    title="Copy ID to clipboard"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      fill="none"
                      height="12"
                      viewBox="0 0 12 12"
                      width="12"
                    >
                      <rect
                        height="8"
                        rx="1"
                        stroke="currentColor"
                        stroke-width="1.2"
                        width="7"
                        x="1"
                        y="3"
                      />
                      <path
                        d="M4 1h6a1 1 0 0 1 1 1v8"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-width="1.2"
                      />
                    </svg>
                    Copy ID
                  </button>
                </div>
              </div>
            </div>
          </li>
        </ol>
        <p
          class="pt-2 text-center text-sm text-slate-500"
          data-testid="reputation-history-end"
        >
          All 
          3
           events shown
        </p>
      </div>
    </div>
  </section>
</main>
`;

exports[`ReputationPageContent snapshot – partial state (score === 0) matches snapshot when score is exactly 0 (edge: falsy-but-valid) 1`] = `
<main
  class="min-h-screen p-8"
>
  <h1
    class="text-2xl font-bold mb-6"
  >
    Reputation
  </h1>
  <section
    aria-labelledby="profile-heading"
    class="w-full max-w-5xl mx-auto space-y-8 px-4 py-10 sm:px-6 lg:px-8"
  >
    <div
      class="rounded-3xl border-[var(--border)] bg-[var(--card)] p-6 shadow-sm sm:p-8"
    >
      <h2
        class="sr-only"
        id="profile-heading"
      >
        Reputation profile for 
        Frank
      </h2>
      <div
        class="flex flex-col gap-6 lg:flex-row lg:items-center lg:justify-between"
      >
        <div
          class="flex items-center gap-4"
        >
          <div
            class="flex h-16 w-16 items-center justify-center rounded-2xl bg-[var(--foreground)] text-2xl font-semibold text-[var(--background)]"
          >
            F
          </div>
          <div>
            <p
              class="text-sm font-medium text-[var(--muted-foreground)]"
            >
              Reputation profile
            </p>
            <h1
              class="text-2xl font-semibold text-[var(--foreground)]"
            >
              Frank
            </h1>
          </div>
        </div>
        <div
          class="flex flex-col gap-2 rounded-3xl bg-[var(--muted)] p-4 text-[var(--muted-foreground)] sm:p-5"
        >
          <p
            class="text-sm font-medium text-[var(--muted-foreground)]"
          >
            Privacy-friendly defaults
          </p>
          <p
            class="text-sm leading-6"
          >
            Only summary trust signals are shown by default. Sensitive metadata remains hidden.
          </p>
        </div>
      </div>
      <div
        class="mt-8 grid gap-4 sm:grid-cols-3"
      >
        <div
          class="rounded-3xl border-[var(--border)] bg-[var(--surface)] p-5"
        >
          <p
            class="text-sm font-medium text-[var(--muted-foreground)]"
            id="reputation-score-label"
          >
            Reputation score
          </p>
          <p
            aria-labelledby="reputation-score-label"
            class="mt-3 text-3xl font-semibold text-[var(--foreground)]"
          >
            <span
              aria-describedby="reputation-legend"
              aria-labelledby="reputation-score-label"
              aria-valuemax="5"
              aria-valuemin="0"
              aria-valuenow="0"
              role="meter"
            >
              <span
                class="sr-only"
              >
                Reputation score 
              </span>
              0
              <span
                class="sr-only"
              >
                 out of 
                5
              </span>
            </span>
          </p>
        </div>
        <div
          class="rounded-3xl border border-[var(--border)] bg-[var(--card)] p-5"
        >
          <p
            class="text-sm font-medium text-[var(--muted-foreground)]"
            id="reputation-level-label"
          >
            Level
          </p>
          <p
            aria-labelledby="reputation-level-label"
            class="mt-3 text-xl font-semibold text-[var(--foreground)]"
          >
            <span
              class="sr-only"
            >
              Level 
            </span>
            Newcomer
          </p>
        </div>
        <div
          class="rounded-3xl border border-[var(--border)] bg-[var(--card)] p-5"
        >
          <p
            class="text-sm font-medium text-[var(--muted-foreground)]"
          >
            Explanation
          </p>
          <p
            class="mt-3 text-sm leading-6 text-[var(--muted-foreground)]"
          >
            Reputation represents verified trust signals and activity history, not sensitive personal metadata. Privacy-friendly defaults keep your profile safe.
          </p>
        </div>
      </div>
      <div
        class="mt-6 border-t border-[var(--border)] pt-6"
      >
        <h2
          class="text-sm font-semibold text-[var(--foreground)]"
          id="reputation-legend-title"
        >
          Reputation Level Legend
        </h2>
        <ul
          aria-labelledby="reputation-legend-title"
          class="mt-3 grid gap-3 sm:grid-cols-5 text-sm"
          id="reputation-legend"
        >
          <li
            class="rounded-2xl border p-3 transition-colors border-[var(--legend-active-border)] bg-[var(--legend-active-bg)] text-[var(--legend-active-foreground)] font-semibold"
          >
            <p
              class="font-bold text-xs uppercase tracking-wider text-[var(--muted-foreground)]"
            >
              0.0
               - 
              1.0
            </p>
            <p
              class="mt-1 text-sm"
            >
              Newcomer
            </p>
          </li>
          <li
            class="rounded-2xl border p-3 transition-colors border-[var(--border)] bg-[var(--surface)] text-[var(--muted-foreground)]"
          >
            <p
              class="font-bold text-xs uppercase tracking-wider text-[var(--muted-foreground)]"
            >
              1.0
               - 
              2.0
            </p>
            <p
              class="mt-1 text-sm"
            >
              Contributor
            </p>
          </li>
          <li
            class="rounded-2xl border p-3 transition-colors border-[var(--border)] bg-[var(--surface)] text-[var(--muted-foreground)]"
          >
            <p
              class="font-bold text-xs uppercase tracking-wider text-[var(--muted-foreground)]"
            >
              2.0
               - 
              3.0
            </p>
            <p
              class="mt-1 text-sm"
            >
              Active Contributor
            </p>
          </li>
          <li
            class="rounded-2xl border p-3 transition-colors border-[var(--border)] bg-[var(--surface)] text-[var(--muted-foreground)]"
          >
            <p
              class="font-bold text-xs uppercase tracking-wider text-[var(--muted-foreground)]"
            >
              3.0
               - 
              4.0
            </p>
            <p
              class="mt-1 text-sm"
            >
              Trusted Partner
            </p>
          </li>
          <li
            class="rounded-2xl border p-3 transition-colors border-[var(--border)] bg-[var(--surface)] text-[var(--muted-foreground)]"
          >
            <p
              class="font-bold text-xs uppercase tracking-wider text-[var(--muted-foreground)]"
            >
              4.0
               - 
              5.0
            </p>
            <p
              class="mt-1 text-sm"
            >
              Expert
            </p>
          </li>
        </ul>
      </div>
      <div
        class="mt-6 rounded-3xl border-[var(--status-warning-bg)] bg-[var(--status-warning-bg)] p-4 text-[var(--status-warning-foreground)]"
      >
        <p
          class="font-semibold"
        >
          Partial reputation data
        </p>
        <p
          class="mt-1 text-sm leading-6"
        >
          A score exists but history is currently hidden until verified actions are available. This keeps your profile safe and private.
        </p>
      </div>
    </div>
    <div
      class="rounded-3xl border-[var(--border)] bg-[var(--card)] p-6 shadow-sm sm:p-8"
    >
      <div
        class="mb-6 flex flex-col gap-4 sm:flex-row sm:items-center sm:justify-between"
      >
        <div>
          <h2
            class="text-xl font-semibold text-[var(--foreground)]"
          >
            Reputation history
          </h2>
          <p
            class="mt-1 text-sm text-[var(--muted-foreground)]"
          >
            History is shown as safe, aggregated events with no wallet or personal metadata by default.
          </p>
        </div>
        <div
          class="flex flex-col gap-3 sm:flex-row sm:items-center sm:gap-4"
        >
          <span
            class="rounded-full bg-[var(--surface)] px-3 py-1 text-xs font-medium uppercase tracking-[0.18em] text-[var(--muted-foreground)]"
          >
            Private by default
          </span>
        </div>
      </div>
      <p
        aria-atomic="true"
        aria-live="polite"
        class="sr-only"
      />
      <div
        class="rounded-3xl border-[var(--border)] bg-[var(--surface)] p-6 text-[var(--muted-foreground)]"
      >
        <p
          class="font-semibold text-[var(--foreground)]"
        >
          No reputation history available yet.
        </p>
        <p
          class="mt-2 text-sm leading-6"
        >
          Reputation history appears once you complete verified actions. Your profile remains safe and privacy-friendly until then.
        </p>
      </div>
    </div>
  </section>
</main>
`;

exports[`ReputationPageContent snapshot – partial state (score, no history) matches snapshot for partial reputation (score only) 1`] = `
<main
  class="min-h-screen p-8"
>
  <h1
    class="text-2xl font-bold mb-6"
  >
    Reputation
  </h1>
  <section
    aria-labelledby="profile-heading"
    class="w-full max-w-5xl mx-auto space-y-8 px-4 py-10 sm:px-6 lg:px-8"
  >
    <div
      class="rounded-3xl border-[var(--border)] bg-[var(--card)] p-6 shadow-sm sm:p-8"
    >
      <h2
        class="sr-only"
        id="profile-heading"
      >
        Reputation profile for 
        Eve
      </h2>
      <div
        class="flex flex-col gap-6 lg:flex-row lg:items-center lg:justify-between"
      >
        <div
          class="flex items-center gap-4"
        >
          <div
            class="flex h-16 w-16 items-center justify-center rounded-2xl bg-[var(--foreground)] text-2xl font-semibold text-[var(--background)]"
          >
            E
          </div>
          <div>
            <p
              class="text-sm font-medium text-[var(--muted-foreground)]"
            >
              Reputation profile
            </p>
            <h1
              class="text-2xl font-semibold text-[var(--foreground)]"
            >
              Eve
            </h1>
          </div>
        </div>
        <div
          class="flex flex-col gap-2 rounded-3xl bg-[var(--muted)] p-4 text-[var(--muted-foreground)] sm:p-5"
        >
          <p
            class="text-sm font-medium text-[var(--muted-foreground)]"
          >
            Privacy-friendly defaults
          </p>
          <p
            class="text-sm leading-6"
          >
            Only summary trust signals are shown by default. Sensitive metadata remains hidden.
          </p>
        </div>
      </div>
      <div
        class="mt-8 grid gap-4 sm:grid-cols-3"
      >
        <div
          class="rounded-3xl border-[var(--border)] bg-[var(--surface)] p-5"
        >
          <p
            class="text-sm font-medium text-[var(--muted-foreground)]"
            id="reputation-score-label"
          >
            Reputation score
          </p>
          <p
            aria-labelledby="reputation-score-label"
            class="mt-3 text-3xl font-semibold text-[var(--foreground)]"
          >
            <span
              aria-describedby="reputation-legend"
              aria-labelledby="reputation-score-label"
              aria-valuemax="5"
              aria-valuemin="0"
              aria-valuenow="2.1"
              role="meter"
            >
              <span
                class="sr-only"
              >
                Reputation score 
              </span>
              2.1
              <span
                class="sr-only"
              >
                 out of 
                5
              </span>
            </span>
          </p>
        </div>
        <div
          class="rounded-3xl border border-[var(--border)] bg-[var(--card)] p-5"
        >
          <p
            class="text-sm font-medium text-[var(--muted-foreground)]"
            id="reputation-level-label"
          >
            Level
          </p>
          <p
            aria-labelledby="reputation-level-label"
            class="mt-3 text-xl font-semibold text-[var(--foreground)]"
          >
            <span
              class="sr-only"
            >
              Level 
            </span>
            Active Contributor
          </p>
        </div>
        <div
          class="rounded-3xl border border-[var(--border)] bg-[var(--card)] p-5"
        >
          <p
            class="text-sm font-medium text-[var(--muted-foreground)]"
          >
            Explanation
          </p>
          <p
            class="mt-3 text-sm leading-6 text-[var(--muted-foreground)]"
          >
            Reputation represents verified trust signals and activity history, not sensitive personal metadata. Privacy-friendly defaults keep your profile safe.
          </p>
        </div>
      </div>
      <div
        class="mt-6 border-t border-[var(--border)] pt-6"
      >
        <h2
          class="text-sm font-semibold text-[var(--foreground)]"
          id="reputation-legend-title"
        >
          Reputation Level Legend
        </h2>
        <ul
          aria-labelledby="reputation-legend-title"
          class="mt-3 grid gap-3 sm:grid-cols-5 text-sm"
          id="reputation-legend"
        >
          <li
            class="rounded-2xl border p-3 transition-colors border-[var(--border)] bg-[var(--surface)] text-[var(--muted-foreground)]"
          >
            <p
              class="font-bold text-xs uppercase tracking-wider text-[var(--muted-foreground)]"
            >
              0.0
               - 
              1.0
            </p>
            <p
              class="mt-1 text-sm"
            >
              Newcomer
            </p>
          </li>
          <li
            class="rounded-2xl border p-3 transition-colors border-[var(--border)] bg-[var(--surface)] text-[var(--muted-foreground)]"
          >
            <p
              class="font-bold text-xs uppercase tracking-wider text-[var(--muted-foreground)]"
            >
              1.0
               - 
              2.0
            </p>
            <p
              class="mt-1 text-sm"
            >
              Contributor
            </p>
          </li>
          <li
            class="rounded-2xl border p-3 transition-colors border-[var(--legend-active-border)] bg-[var(--legend-active-bg)] text-[var(--legend-active-foreground)] font-semibold"
          >
            <p
              class="font-bold text-xs uppercase tracking-wider text-[var(--muted-foreground)]"
            >
              2.0
               - 
              3.0
            </p>
            <p
              class="mt-1 text-sm"
            >
              Active Contributor
            </p>
          </li>
          <li
            class="rounded-2xl border p-3 transition-colors border-[var(--border)] bg-[var(--surface)] text-[var(--muted-foreground)]"
          >
            <p
              class="font-bold text-xs uppercase tracking-wider text-[var(--muted-foreground)]"
            >
              3.0
               - 
              4.0
            </p>
            <p
              class="mt-1 text-sm"
            >
              Trusted Partner
            </p>
          </li>
          <li
            class="rounded-2xl border p-3 transition-colors border-[var(--border)] bg-[var(--surface)] text-[var(--muted-foreground)]"
          >
            <p
              class="font-bold text-xs uppercase tracking-wider text-[var(--muted-foreground)]"
            >
              4.0
               - 
              5.0
            </p>
            <p
              class="mt-1 text-sm"
            >
              Expert
            </p>
          </li>
        </ul>
      </div>
      <div
        class="mt-6 rounded-3xl border-[var(--status-warning-bg)] bg-[var(--status-warning-bg)] p-4 text-[var(--status-warning-foreground)]"
      >
        <p
          class="font-semibold"
        >
          Partial reputation data
        </p>
        <p
          class="mt-1 text-sm leading-6"
        >
          A score exists but history is currently hidden until verified actions are available. This keeps your profile safe and private.
        </p>
      </div>
    </div>
    <div
      class="rounded-3xl border-[var(--border)] bg-[var(--card)] p-6 shadow-sm sm:p-8"
    >
      <div
        class="mb-6 flex flex-col gap-4 sm:flex-row sm:items-center sm:justify-between"
      >
        <div>
          <h2
            class="text-xl font-semibold text-[var(--foreground)]"
          >
            Reputation history
          </h2>
          <p
            class="mt-1 text-sm text-[var(--muted-foreground)]"
          >
            History is shown as safe, aggregated events with no wallet or personal metadata by default.
          </p>
        </div>
        <div
          class="flex flex-col gap-3 sm:flex-row sm:items-center sm:gap-4"
        >
          <span
            class="rounded-full bg-[var(--surface)] px-3 py-1 text-xs font-medium uppercase tracking-[0.18em] text-[var(--muted-foreground)]"
          >
            Private by default
          </span>
        </div>
      </div>
      <p
        aria-atomic="true"
        aria-live="polite"
        class="sr-only"
      />
      <div
        class="rounded-3xl border-[var(--border)] bg-[var(--surface)] p-6 text-[var(--muted-foreground)]"
      >
        <p
          class="font-semibold text-[var(--foreground)]"
        >
          No reputation history available yet.
        </p>
        <p
          class="mt-2 text-sm leading-6"
        >
          Reputation history appears once you complete verified actions. Your profile remains safe and privacy-friendly until then.
        </p>
      </div>
    </div>
  </section>
</main>
`;
